Modal full height, fixed overlap.

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,50 @@
 @import 'var';
 
+// Header
 
+.header {
+  position: relative;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+}
 
+.header-container {
+  height: 100%;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.header-logo {
+  & img {
+    height: 20px;
+  }
+}
+
+.header-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
+.header-menu__item {
+  margin-right: 14px;
+  position: relative;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  & img {
+    width: 25px;
+    transition: transform 0.2s $t1;
+  }
+}
